added the dependency to the project to circumvent crates.io and updated all projects

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "arduboy-rust",
     "Examples/Arduboy-Tutorials/eeprom",
     "Examples/Arduboy-Tutorials/tone",
     "Examples/Arduboy-Tutorials/demo2",
