added support for printing out of progmem

--- a/Project/game/Cargo.toml
+++ b/Project/game/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 crate-type = ["staticlib"]
 
 [dependencies]
+avr-progmem = "0.3.3"
 arduboy-rust = { path = "../../arduboy-rust" }
