added new demo for progmem and implemented new features for the usage of progmem.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,12 +5,14 @@ target-dir = "./target"
 [profile.release]
 codegen-units = 1
 lto = "fat"
+strip = true
 opt-level = "z"
 panic = "abort"
 
 [profile.dev]
 codegen-units = 1
 lto = "fat"
+strip = true
 opt-level = "z"
 panic = "abort"
 
