--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "arduboy-rust",
     "Examples/Arduboy-Tutorials/eeprom",
+    "Examples/Arduboy-Tutorials/eeprom-byte",
     "Examples/Arduboy-Tutorials/progmem",
     "Examples/Arduboy-Tutorials/tone",
     "Examples/Arduboy-Tutorials/demo2",
