--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /target
 /.vscode
 
-/Wrapper-Project/.pio
-/Wrapper-Project/lib/*.a
+arduboy-rust/Wrapper-Project/.pio
+arduboy-rust/Wrapper-Project/lib/*.a
+arduboy-rust/Wrapper-Project/build/*.hex
