--- a/arduboy-rust/Wrapper-Project/platformio.ini
+++ b/arduboy-rust/Wrapper-Project/platformio.ini
@@ -13,9 +13,10 @@ platform = atmelavr
 board = arduboy
 framework = arduino
 
+build_unflags = -Os
 
 build_flags =
-    -L lib -l libgame 
+    -L lib -l libgame -O2
 
 lib_deps =
     mlxxxp/Arduboy2@^6.0.0
