--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ localcommands.txt
 arduboy-rust/Wrapper-Project/.pio
 arduboy-rust/Wrapper-Project/lib/*.a
 arduboy-rust/Wrapper-Project/build/*.hex
+**/imports.h
